--- a/main.html
+++ b/main.html
@@ -1,16 +1,21 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Testimonial Section</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
-
+    <div class="testimonial-container">
+        <div class="testimonial">
+            <p class="testimonial-text">"This service has completely transformed my business. The quality and support are unparalleled!"</p>
+            <p class="testimonial-author">- John Doe</p>
+        </div>
+        <div class="testimonial">
+            <p class="testimonial-text">"I can't recommend this enough! The team was incredibly helpful and made everything so easy!"</p>
+            <p class="testimonial-author">- Jane Smith</p>
+        </div>
+    </div>
 </body>
-
 </html>
