--- a/main.html
+++ b/main.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Testimonial Section</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css"> <!-- Link to CSS -->
 </head>
 <body>
+    <h1>Customer Testimonials</h1> <!-- Ensure there's an H1 element -->
     <div class="testimonial-container">
         <div class="testimonial">
             <p class="testimonial-text">"This service has completely transformed my business. The quality and support are unparalleled!"</p>
